# aspen

./: .gitignore  .prettierignore  AGENTS.md  README.md  components.json  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: audio_pwm_sky_demo.v  bram_inferred_demo.v  bram_inferred_init.mem  vga_test_rgb332.v
scripts/: generate-app-icon.sh  generate-zh-tw-locale.mjs  generate-zh-tw-manuals.mjs  generate_updater_manifest.py  prepare-fde-bundle.mjs  prepare-slang-server-bundle.mjs  prepare-tauri-build.mjs  prepare-yosys-bundle.mjs  restore-bundled-toolchain-perms.sh
src/: App.vue  index.css  main.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json  tauri.release.conf.json  tauri.windows.conf.json  tauri.yosys.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resource/windows-driver/: README.md
src-tauri/resource/yosys-fde/: cells_map.v  fdesimlib.v
src-tauri/src/: app_appearance.rs  app_menu.rs  app_update.rs  hardware_commands.rs  hdl_lsp.rs  lib.rs  main.rs  memory_image.rs  project_commands.rs
src-tauri/src/hardware/: driver.rs  implementation.rs  jobs.rs  mod.rs  process_output.rs  runtime.rs  synthesis.rs  types.rs
src-tauri/src/hardware/implementation/: artifacts.rs  process.rs  report.rs  stages.rs  tests.rs  toolchain.rs
src-tauri/src/hardware/runtime/: canvas.rs  input.rs  output.rs  registry.rs  shared.rs  stream.rs  telemetry.rs  tests.rs
src-tauri/src/hardware/synthesis/: artifacts.rs  netlist.rs  process.rs  tests.rs  toolchain.rs  visualization.rs
src-tauri/updater/: public-key.txt
src-tauri/windows/: driver-hooks.nsh
src/components/: AppSidebar.vue  BaseWidget.vue  BulbLight.vue  ComponentGallery.vue  ComponentPanel.vue  NavMain.vue  NavProjects.vue  ProjectMenu.vue  RightDrawer.vue  SettingsDrawer.vue  ThemeToggleButton.vue  TopModuleSelect.vue  WindowControls.vue
src/directives/: window-chrome.ts
src/lib/: app-shell.test.ts  app-shell.ts  app-update.ts  async-view-lifecycle.test.ts  async-view-lifecycle.ts  canvas-device-config.ts  canvas-device-definitions.ts  canvas-device-types.ts  canvas-devices-i18n-regression.test.ts  canvas-devices-memory.test.ts  canvas-devices.ts  canvas-selection.test.ts  canvas-selection.ts  clipboard.ts  confirm-action.ts  device-shell-metrics.ts  editor-language.test.ts  editor-language.ts  flow-artifact-manifest.ts  flow-report-selection.test.ts  flow-report-selection.ts  fpga-board-catalog.ts  fpga-device-catalog.ts  hardware-client.ts  hardware-errors.test.ts  hardware-errors.ts  hardware-manager.test.ts  hardware-manager.ts  i18n.ts  (+46 more)
tools/aspen-driver-installer/: Cargo.toml
tools/aspen-driver-installer/src/: main.rs
(+254 files in other folders)
