[package]
name = "aspen"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aspen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
rmp-serde = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vlfd-rs = "1.0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSLocale", "NSString"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Globalization", "Win32_System_Console"] }
