[package]
name = "aspen"
version = "0.4.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aspen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fde = "1.0"
vlfd-rs = "3"
tauri-plugin-updater = "2.10.1"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSAppearance", "NSColor", "NSResponder", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3.2", features = ["NSArray", "NSLocale", "NSString", "NSUserDefaults"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Globalization", "Win32_System_Console", "Win32_System_Registry"] }
