[package]
name = "aspen-driver-installer"
version = "0.1.0"
description = "Windows driver installer helper bundled with Aspen releases."
authors = ["0xtaruhi"]
homepage = "https://github.com/0xtaruhi/aspen"
repository = "https://github.com/0xtaruhi/aspen"
edition = "2021"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
log = "0.4"
wdi-rs = "0.1"
